# ThreatLab

./: .gitignore  CNAME  README.md  SECURITY.md  main.py  requirements.txt
.github/: dependabot.yml
.github/workflows/: codeql.yml
lib/: MemVuln.cpp  MemVuln.hpp  attack_type.py  ddos_main.py  dos_lib.py  go.mod  net_cpp.cpp  net_lib.go  port_lib.go  processList.go  test_lib.py
lib/pe/: bin_analyzer.cpp  bin_analyzer.hpp  bin_analyzer.md
lib/sandbox/: NoCustom.md  fullLock.go
shellcodes/: basic_sc.md  hide_dir.asm  hide_file.asm  reverseShell.asm  reverseShell.md
shellcodes/shell_source_code/: heap_overflow.cpp  stack_overflow.cpp  tcp_port.go
shellcodes/shellcode_bin/: heap_overflow_lin  memory  shell  stack_malloc
src/: MemMain.cpp  MemVuln.cpp  analyze.py  ddos_main.py  dllbreakpoint.cpp  proc_analysis.py
src/Mem/: Breakpoint.asm  MemMain.cpp  MemVuln.cpp  QuickBreakpoint.asm  SignSection.cpp  Syscalls.md  bootHding.cpp  breakpoint.asm  enctyp_bitwise.cpp  hexView.cpp  rop_finder.py  scanner.cpp
src/Mem/WinAPi/: CertificateEnum.cpp  FileDescriptor.cpp  ImageDebug.cpp  (+4 more)
src/net/: ddos_main.py  dos.cpp  dos_Prog.cpp
src/processe/: proc_analysis.py
src/processes/: NoStop.md  antidbg.go  dllbreakpoint.cpp  privilageEscalation.md  proc_analysis.py
src/resources/: LINK.md  README.MD  readme.md  win_escalation.md
src/rules/: EncryptFinder.yar  LogStop.yar  keylogg.yar  malware.yar  officeDocMacro.yar  packed.yar  ransom.yar  shellComm.yar
src/sand/: box.go
src/sandbox/: sand.go
src/web/WordV/: Cargo.toml  README.md
src/web/WordV/src/: main.rs
(+16 files in other folders)
