[package]
name = "WordV"
version = "0.1.0"
edition = "2024"

[dependencies]
quick-xml = "0.37.4"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["blocking", "rustls-tls"]}
tokio = { version = "1.44.2", features = ["full"] }
webbrowser = "1.0.4"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
